# calm-cmake

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  calm-cmakeConfig.cmake.in
cmake/: Bootstrap.cmake  GetCPM.cmake
cmake/build-modules/: Boost.cmake  CMakeUtilities.cmake  cmake-utilities.cmake
cmake/build-modules/Boost/: algorithm.cmake  align.cmake  array.cmake  assert.cmake  atomic.cmake  bind.cmake  chrono.cmake  concept_check.cmake  config.cmake  container.cmake  container_hash.cmake  conversion.cmake  core.cmake  date_time.cmake  detail.cmake  dynamic_bitset.cmake  endian.cmake  exception.cmake  filesystem.cmake  foreach.cmake  function.cmake  function_types.cmake  functional.cmake  fusion.cmake  integer.cmake  internal.cmake  intrusive.cmake  io.cmake  iostreams.cmake  iterator.cmake  lambda.cmake  lexical_cast.cmake  locale.cmake  math.cmake  move.cmake  mp11.cmake  mpl.cmake  multiprecision.cmake  numeric_conversion.cmake  optional.cmake  (+28 more)
cmake/build-modules/Catch2/: Catch2WithMain.cmake
cmake/build-modules/GTest/: gtest.cmake  gtest_main.cmake
cmake/core/: AddSyntagmaTarget.cmake  AddTarget.cmake  Bootstrap.cmake  DependencyManagement.cmake  Plugin.cmake  TPA.cmake  overridable.cmake
cmake/plugins/: DoxygenCMake.cmake  DoxypressCMake.cmake  Sanitizers.cmake  autotest.cmake  catch2.cmake  catch2.discover.tests.cmake  concepts.cmake  coverage.cmake  debug_postfix.cmake  doxygen_cmake.cmake  doxypress.cmake  examples.cmake  gtest.cmake  install.cmake  sanitizers.cmake  so_version.cmake
i18n/: CMakeLists.txt
i18n/cmake/build-modules/fmt/: fmt.cmake
i18n/include/syntagma/i18n/: format.h
i18n/test/: cat.cc  format_test.cc  localized_test_store.cc
test/: CMakeLists.txt
test/cmake/: AddTargetTest.cmake  CommonTest.cmake  DependencyManagementTest.cmake  ImportCmakeUtilities.cmake  PluginTest.cmake
test/include/syntagma/i18n/: localized_text_store.h
test/src/: fun.cc
test/test/: cat.cc  format_test.cc  localized_test_store.cc
